# cav_codegen_examples

./: .gitignore  install.sh  readme.md
cavctrl_codegen/: .gitignore  CMakeLists.txt  _cwrapper.py  copy.sh  main_compiling.m  test.py  test.sh
cavctrl_codegen/CAV_mdl/: BFGSUpdate.cpp  BFGSUpdate.h  CAV_ctrl_mdl_wTraJ_241219.cpp  CAV_ctrl_mdl_wTraJ_241219.h  CAV_ctrl_mdl_wTraJ_241219_data.cpp  CAV_ctrl_mdl_wTraJ_241219_data.h  CAV_ctrl_mdl_wTraJ_241219_initialize.cpp  CAV_ctrl_mdl_wTraJ_241219_initialize.h  CAV_ctrl_mdl_wTraJ_241219_internal_types.h  CAV_ctrl_mdl_wTraJ_241219_internal_types1.h  CAV_ctrl_mdl_wTraJ_241219_internal_types2.h  CAV_ctrl_mdl_wTraJ_241219_rtwutil.cpp  CAV_ctrl_mdl_wTraJ_241219_rtwutil.h  CAV_ctrl_mdl_wTraJ_241219_spec.h  CAV_ctrl_mdl_wTraJ_241219_terminate.cpp  CAV_ctrl_mdl_wTraJ_241219_terminate.h  CAV_ctrl_mdl_wTraJ_241219_types.h  GrnWndSlctr_230512.cpp  GrnWndSlctr_230512.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RefTrjGnrtr_240503.cpp  RefTrjGnrtr_240503.h  RefUpdate_230407.cpp  RefUpdate_230407.h  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  anonymous_function.h  buildInfo.mat  compressBounds.cpp  compressBounds.h  computeComplError.cpp  computeComplError.h  computeDualFeasError.cpp  computeDualFeasError.h  computeFiniteDifferences.cpp  computeFiniteDifferences.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  (+128 more)
cavctrl_codegen/lib/: cav_so.lib
pcc_codegen/: .gitignore  CMakeLists.txt  _cppwrapper.py  copy.sh  install.sh  test.py
pcc_codegen/include/: pccmpc_api.h
pcc_codegen/lib/: pcc_so.lib
pcc_codegen/longitudinal_mpc/longitudinal_mpc/longitudinal_mpc_grt_rtw/: CMakeLists.txt  buildInfo.mat  coder_array.h  longitudinal_mpc.cpp  longitudinal_mpc.h  longitudinal_mpc_private.h  longitudinal_mpc_types.h  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
pcc_codegen/src/: pccmpc_api.cpp
